@@ -65,15 +65,15 @@ write_bridge_params(GString* s, net_definition* def)
         params = g_string_sized_new(200);
 
         if (def->bridge_params.ageing_time)
-            g_string_append_printf(params, "AgeingTimeSec=%u\n", def->bridge_params.ageing_time);
+            g_string_append_printf(params, "AgeingTimeSec=%s\n", def->bridge_params.ageing_time);
         if (def->bridge_params.priority)
             g_string_append_printf(params, "Priority=%u\n", def->bridge_params.priority);
         if (def->bridge_params.forward_delay)
-            g_string_append_printf(params, "ForwardDelaySec=%u\n", def->bridge_params.forward_delay);
+            g_string_append_printf(params, "ForwardDelaySec=%s\n", def->bridge_params.forward_delay);
         if (def->bridge_params.hello_time)
-            g_string_append_printf(params, "HelloTimeSec=%u\n", def->bridge_params.hello_time);
+            g_string_append_printf(params, "HelloTimeSec=%s\n", def->bridge_params.hello_time);
         if (def->bridge_params.max_age)
-            g_string_append_printf(params, "MaxAgeSec=%u\n", def->bridge_params.max_age);
+            g_string_append_printf(params, "MaxAgeSec=%s\n", def->bridge_params.max_age);
         g_string_append_printf(params, "STP=%s\n", def->bridge_params.stp ? "true" : "false");
 
         g_string_append_printf(s, "\n[Bridge]\n%s", params->str);
@@ -125,7 +125,7 @@ write_bond_parameters(net_definition* def, GString* s)
     if (def->bond_params.lacp_rate)
         g_string_append_printf(params, "\nLACPTransmitRate=%s", def->bond_params.lacp_rate);
     if (def->bond_params.monitor_interval)
-        g_string_append_printf(params, "\nMIIMonitorSec=%d", def->bond_params.monitor_interval);
+        g_string_append_printf(params, "\nMIIMonitorSec=%s", def->bond_params.monitor_interval);
     if (def->bond_params.min_links)
         g_string_append_printf(params, "\nMinLinks=%d", def->bond_params.min_links);
     if (def->bond_params.transmit_hash_policy)
@@ -135,7 +135,7 @@ write_bond_parameters(net_definition* def, GString* s)
     if (def->bond_params.all_slaves_active)
         g_string_append_printf(params, "\nAllSlavesActive=%d", def->bond_params.all_slaves_active);
     if (def->bond_params.arp_interval)
-        g_string_append_printf(params, "\nARPIntervalSec=%d", def->bond_params.arp_interval);
+        g_string_append_printf(params, "\nARPIntervalSec=%s", def->bond_params.arp_interval);
     if (def->bond_params.arp_ip_targets && def->bond_params.arp_ip_targets->len > 0) {
         g_string_append_printf(params, "\nARPIPTargets=");
         for (unsigned i = 0; i < def->bond_params.arp_ip_targets->len; ++i) {
@@ -149,9 +149,9 @@ write_bond_parameters(net_definition* def, GString* s)
     if (def->bond_params.arp_all_targets)
         g_string_append_printf(params, "\nARPAllTargets=%s", def->bond_params.arp_all_targets);
     if (def->bond_params.up_delay)
-        g_string_append_printf(params, "\nUpDelaySec=%d", def->bond_params.up_delay);
+        g_string_append_printf(params, "\nUpDelaySec=%s", def->bond_params.up_delay);
     if (def->bond_params.down_delay)
-        g_string_append_printf(params, "\nDownDelaySec=%d", def->bond_params.down_delay);
+        g_string_append_printf(params, "\nDownDelaySec=%s", def->bond_params.down_delay);
     if (def->bond_params.fail_over_mac_policy)
         g_string_append_printf(params, "\nFailOverMACPolicy=%s", def->bond_params.fail_over_mac_policy);
     if (def->bond_params.gratuitious_arp)
@@ -164,7 +164,7 @@ write_bond_parameters(net_definition* def, GString* s)
     if (def->bond_params.resend_igmp)
         g_string_append_printf(params, "\nResendIGMP=%d", def->bond_params.resend_igmp);
     if (def->bond_params.learn_interval)
-        g_string_append_printf(params, "\nLearnPacketIntervalSec=%d", def->bond_params.learn_interval);
+        g_string_append_printf(params, "\nLearnPacketIntervalSec=%s", def->bond_params.learn_interval);
 
     if (params->len)
         g_string_append_printf(s, "\n[Bond]%s\n", params->str);
